--- a/shop/src/app/app.component.html
+++ b/shop/src/app/app.component.html
@@ -1,15 +1,20 @@
-<div class="w-100 center position-relative align-items-start {{user.isSuperUser() ? 'grid' : ''}}" id="app-container">
-  <app-admin-nav *ngIf="user.isSuperUser()"></app-admin-nav>
+<mat-drawer-container>
+  <div class="w-100 center position-relative align-items-start {{user.isSuperUser() ? 'grid' : ''}}" id="app-container">
+    <app-admin-nav *ngIf="user.isSuperUser()"></app-admin-nav>
 
-  <div class="body-content w-100 position-relative" #body>
-    <app-header-top></app-header-top>
+    <div class="body-content w-100 position-relative" #body>
+      <app-header-top></app-header-top>
 
-    <app-header-main></app-header-main>
+      <app-header-main></app-header-main>
 
-    <div class="body-wrap w-100">
-      <router-outlet></router-outlet>
+      <div class="body-wrap w-100">
+        <router-outlet></router-outlet>
+      </div>
+
+      <app-footer></app-footer>
     </div>
-
-    <app-footer></app-footer>
   </div>
-</div>
+  <mat-drawer>
+    <app-side-bar></app-side-bar>
+  </mat-drawer>
+</mat-drawer-container>
