--- a/shop/src/app/Components/header/header.component.html
+++ b/shop/src/app/Components/header/header.component.html
@@ -3,22 +3,6 @@
     <div class="header__content">
       <app-logo></app-logo>
       <ul class="header__links justify-content-end">
-        <li class="header__link center"><a mat-button routerLink="" routerLinkActive="active-btn"
-                                           [routerLinkActiveOptions]="{exact:true}">Home</a></li>
-        <li class="header__link center"><a mat-button routerLink="/products" routerLinkActive="active-btn">
-          All
-        </a>
-        </li>
-        <li class="header__link center" *ngIf="!user.is_auth"><a mat-button [routerLink]="['authenticate']"
-                                                                 [queryParams]="{isLogin:true}"
-                                                                 routerLinkActive="active-btn">Login </a></li>
-        <li class="header__link center" *ngIf="user.is_auth"><a mat-button routerLink="/profile/{{user.id}}"
-                                                                routerLinkActive="active-btn">Admin panel</a></li>
-        <li class="header__link center">
-          <a mat-button routerLink="/contacts" *ngIf="!user.isSuperUser()">
-            Contact us
-          </a>
-        </li>
         <li class="header__link header__search center flex-column position-relative" on-click="showSearch()">
           <button mat-mini-fab color="accent" class="search__icon">
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor"
@@ -34,7 +18,6 @@
             *ngIf="user.is_auth">
           <app-avatar [showAuthAvatar]="true" [showPopup]="showPopup"></app-avatar>
         </li>
-
         <li class="header__link center flex-column" *ngIf="!user.is_auth">
           <app-avatar [showAuthAvatar]="false" [showPopup]="showPopup"></app-avatar>
         </li>
@@ -47,21 +30,11 @@
   <div class="header__wrap wrap-md">
     <div class="header__content position-relative">
       <app-logo></app-logo>
-      <ul class="header__links" #headerlinks [@fade]="animState" (@fade.done)="endAnimation($event)"
+      <ul class="header__links"
+          #headerlinks
+          [@fade]="animState"
+          (@fade.done)="endAnimation($event)"
           (@fade.start)="startAnimation($event)">
-        <li class="header__link center"><a mat-button routerLink="" routerLinkActive="active-btn"
-                                           [routerLinkActiveOptions]="{exact:true}">Home</a></li>
-        <li class="header__link center"><a mat-button routerLink="/products" routerLinkActive="active-btn">All</a>
-        </li>
-        <li class="header__link center" *ngIf="!user.is_auth"><a mat-button [routerLink]="['authenticate']"
-                                                                 [queryParams]="{isLogin:true}"
-                                                                 routerLinkActive="active-btn">Login </a></li>
-        <li class="header__link center" *ngIf="user.is_auth"><a mat-button routerLink="/profile/{{user.id}}"
-                                                                routerLinkActive="active-btn">Admin</a></li>
-        <li class="header__link center" *ngIf="user.isSuperUser()"><a mat-button routerLink="/profile/users"
-                                                                      routerLinkActive="active-btn">Пользователи</a>
-        </li>
-        <li class="header__link center" *ngIf="!user.isSuperUser()"><a mat-button routerLink="/contacts">Contact us</a></li>
         <li class="header__link header__search center flex-column position-relative" on-click="showSearch()">
           <button mat-flat-button color="accent" class="search__btn center d-flex" on-click="toggleHeader()">
             <div class="center w-100">
