feat: fix sidebar

--- a/shop/src/app/Components/header-top/header-top.component.html
+++ b/shop/src/app/Components/header-top/header-top.component.html
@@ -3,9 +3,9 @@
     <div class="header-top__wrap wrap-md  center justify-content-end">
          <div class="header-top__container">
               <div class="header-top__auth-links text-light">
-                   <a routerLink="authenticate" [queryParams]="{isLogin: true}">Войдите</a>
-                   <span>или</span>
-                   <a routerLink="authenticate"  [queryParams]="{isLogin: false}">Зарегестрируйтесь</a>
+                   <a routerLink="authenticate" [queryParams]="{isLogin: true}">Log in</a>
+                   <span>or</span>
+                   <a routerLink="authenticate"  [queryParams]="{isLogin: false}">sign up</a>
               </div>
          </div>
     </div>
