--- a/shop/src/app/Layouts/section-layout/section-layout.component.html
+++ b/shop/src/app/Layouts/section-layout/section-layout.component.html
@@ -1,6 +1,9 @@
 <section [ngClass]="['section', cssClass]">
   <div [ngClass]="getCssClass('wrap')">
     <div [ngClass]="getCssClass('content')">
+      <div [ngClass]="getCssClass('bread-crumbs')" *ngIf="hasBreadCrumbs">
+        <ng-content select="[breadCrumbs]"></ng-content>
+      </div>
       <div [ngClass]="getCssClass('title','text-center')" *ngIf="hasTitle">
          {{title}}
       </div>
