--- a/shop/src/app/Pages/CategoryPage/CategoryPage.component.html
+++ b/shop/src/app/Pages/CategoryPage/CategoryPage.component.html
@@ -1,5 +1,5 @@
 <div class="w-100 categories__area first-slide">
-    <app-products [isCategoryPage]="true">
+    <app-products productsAdditional [isCategoryPage]="true">
         <div class="categories__search-query">
             <h6 class="text-center">
                 Вы смотрите товары, находящиеся в категории
