--- a/shop/src/app/Pages/home-page/home-page.component.scss
+++ b/shop/src/app/Pages/home-page/home-page.component.scss
@@ -22,16 +22,8 @@
   }
 }
 
-.section__content {
+.home-slider__main-content {
   position: relative;
-}
-
-.home__carousel {
-  position: absolute;
-  z-index: 2;
-  left: 0;
-  top: 40px;
-  width: 100%;
 }
 
 .home__cards {
