--- a/shop/src/app/Pages/auth-page/auth-page.component.html
+++ b/shop/src/app/Pages/auth-page/auth-page.component.html
@@ -4,14 +4,14 @@
             <div class="d-flex center flex-column w-100">
                 <div class="auth__form shadow">
                     <div class="auth__headline h3  text-center">
-                        {{'Вход в систему' | uppercase}}
+                        {{'Authentication' | uppercase}}
                     </div>
                     <mat-tab-group (selectedTabChange)="click($event)" color="accent" mat-align-tabs="center" [selectedIndex]="selectedIndex">
-                        <mat-tab label="{{'Вход'.toUpperCase()}}">
+                        <mat-tab label="{{'Log in'.toUpperCase()}}">
                             <ng-template [ngTemplateOutlet]="formTemplate" [ngTemplateOutletContext]="{isLog:true}">
                             </ng-template>
                         </mat-tab>
-                        <mat-tab label="{{'Регестрация'.toUpperCase()}}">
+                        <mat-tab label="{{'Sign up'.toUpperCase()}}">
                             <ng-template [ngTemplateOutlet]="formTemplate" [ngTemplateOutletContext]="{isLog:false}">
                             </ng-template>
                         </mat-tab>
@@ -29,20 +29,19 @@
 
 <ng-template #formTemplate let-isLog="isLog">
     <form [formGroup]="form">
-
         <mat-card class="d-flex center flex-column">
             <mat-card-content class="w-100">
                 <div class="auth__items wrap-md center flex-column w-100">
                     <div class="auth__email mb-half" *ngIf="!isLog">
                         <mat-form-field appearance="outline" class="w-100" color="accent">
-                            <mat-label>Почта</mat-label>
+                            <mat-label>Email</mat-label>
                             <input type="email" matInput [formControl]="email" maxlength="30" minlength="10" required>
                             <mat-hint>Максимум - 30 букв, минимум 10</mat-hint>
                         </mat-form-field>
                     </div>
                     <div class="auth__username mb-half">
                         <mat-form-field appearance="outline" class="w-100" color="accent">
-                            <mat-label>Имя пользователя</mat-label>
+                            <mat-label>Username</mat-label>
                             <input type="text" matInput formControlName="username" maxlength="30" minlength="10"
                                 required />
                             <mat-hint>Максимум - 30 букв, минимум 10</mat-hint>
@@ -50,7 +49,7 @@
                     </div>
                     <div class="auth__password mb-half">
                         <mat-form-field appearance="outline" class="w-100" color="accent">
-                            <mat-label>Пароль</mat-label>
+                            <mat-label>Password</mat-label>
                             <input type="password" matInput formControlName="password" maxlength="30" minlength="10"
                                 required>
                             <mat-hint>Максимум - 30 букв, минимум 10</mat-hint>
@@ -74,7 +73,9 @@
                 <button mat-flat-button
                         color="accent"
                         (click)="submit($event)"
-                        class="wrap-md auth__btn">{{isLog?"Войти":"Зарегестрироваться"}}</button>
+                        class="wrap-md auth__btn">
+                  Submit
+                </button>
             </mat-card-content>
         </mat-card>
     </form>
