--- a/shop/src/app/app.component.html
+++ b/shop/src/app/app.component.html
@@ -4,17 +4,14 @@
 
     <div class="body-content w-100 position-relative" #body>
       <app-header-top></app-header-top>
-
       <app-header-main></app-header-main>
-
       <div class="body-wrap w-100">
         <router-outlet></router-outlet>
       </div>
-
       <app-footer></app-footer>
     </div>
   </div>
-  <mat-drawer>
+  <mat-drawer #drawer>
     <app-side-bar></app-side-bar>
   </mat-drawer>
 </mat-drawer-container>
