--- a/shop/src/base.scss
+++ b/shop/src/base.scss
@@ -33,15 +33,15 @@
 .headline-gr,
 .h1, h1 {
     font-size: 65px !important;
-    line-height: 1.07143 !important;
+    line-height: 1.5 !important;
     font-weight: 400 !important;
     letter-spacing: -.005em !important;
 }
 
 .headline-md,
 .h2, h2 {
-    font-size: 56px !important;
-    line-height: 1.07143 !important;
+    font-size: 43px !important;
+    line-height: 1.5 !important;
     letter-spacing: -.005em;
 }
 
@@ -50,7 +50,7 @@
   font-weight: 300 !important;
   letter-spacing: .007em !important;
   margin-top: 12px !important;
-  line-height: 1.3 !important;
+  line-height: 1.57 !important;
   padding-bottom: 1rem !important;
 }
 
@@ -58,7 +58,7 @@
     letter-spacing: 0.011em !important;
     margin-bottom: 0.2em !important;
     font-size: 26px !important;
-    line-height: 1.381 !important;
+    line-height: 1.57 !important;
     font-weight: 300 !important;
 }
 
@@ -85,7 +85,7 @@
     font-weight: 300;
     letter-spacing: .007em;
     margin-top: 12px !important;
-    line-height: 1.3 !important;
+    line-height: 1.57 !important;
 }
 
 %center,.center{
@@ -99,16 +99,15 @@
   margin:0 auto;
 }
 
-.wrap-md-pd{
+.wrap-md {
   @extend %wrap;
-  max-width:1000px;
-  padding: $margin*4 0;
+  max-width: $max-width;
 }
 
-.simple-wrap{
+.wrap-md-pd{
   @extend %wrap;
-  max-width:1000px;
-  padding: $margin*2 0;
+  max-width:$max-width;
+  padding: $margin*3 0;
 }
 
 .p-all{
